--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.en.resx
@@ -162,4 +162,7 @@
   <data name="AssetInformation" xml:space="preserve">
     <value>Asset Information</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
 </root>
