--- a/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.en.resx
@@ -162,4 +162,7 @@
   <data name="DisposalReport" xml:space="preserve">
     <value>Disposal Report</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
 </root>
