--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/EditTransfer.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/EditTransfer.en.resx
@@ -186,4 +186,10 @@
   <data name="YourSelection" xml:space="preserve">
     <value>Your Selection</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
+  <data name="Transfers" xml:space="preserve">
+    <value>Transfers</value>
+  </data>
 </root>
