--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetDocuments.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetDocuments.so.resx
@@ -126,6 +126,9 @@
   <data name="AssetDocuments" xml:space="preserve">
     <value>Dukumintiyada Hantida</value>
   </data>
+  <data name="Assets" xml:space="preserve">
+    <value>Hantida</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Jooji</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="Confirm" xml:space="preserve">
     <value>Xaqiiji</value>
+  </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
   </data>
   <data name="DeleteConfirmationMessage" xml:space="preserve">
     <value>Ma awoodi doontid in aad mar kale soo ceshato dokumentigan</value>
@@ -158,6 +164,9 @@
   </data>
   <data name="SNo" xml:space="preserve">
     <value>T.T</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Bakhaaro</value>
   </data>
   <data name="Upload" xml:space="preserve">
     <value>Geli</value>
