--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.en.resx
@@ -249,4 +249,13 @@
   <data name="DeleteConfirmationMessage" xml:space="preserve">
     <value>Are you sure you want to delete this asset?</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Stores</value>
+  </data>
+  <data name="Assets" xml:space="preserve">
+    <value>Assets</value>
+  </data>
 </root>
