--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.so.resx
@@ -249,4 +249,13 @@
   <data name="DeleteConfirmationMessage" xml:space="preserve">
     <value>Ma hubtaa inaad xaqiijiso tirtirka hantidan?</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Bakhaaro</value>
+  </data>
+  <data name="Assets" xml:space="preserve">
+    <value>Hantida</value>
+  </data>
 </root>
