--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.so.resx
@@ -162,4 +162,7 @@
   <data name="AssetInformation" xml:space="preserve">
     <value>Macluumaadka Hantida</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
+  </data>
 </root>
