--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/CreateAsset.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/CreateAsset.en.resx
@@ -234,4 +234,16 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Stores</value>
+  </data>
+  <data name="Assets" xml:space="preserve">
+    <value>Assets</value>
+  </data>
+  <data name="CreateAsset" xml:space="preserve">
+    <value>Create Asset</value>
+  </data>
 </root>
