--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.so.resx
@@ -234,10 +234,22 @@
   <data name="SaveChanges" xml:space="preserve">
     <value>Kaydi Isbeddelada</value>
   </data>
-  <data name="EditAsset" xml:space="preserve">
+  <data name="EditAssetDetails" xml:space="preserve">
     <value>Wax ka beddel Faahfaahinta Hantida</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>Jooji</value>
+  </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Bakhaaro</value>
+  </data>
+  <data name="Assets" xml:space="preserve">
+    <value>Hantida</value>
+  </data>
+  <data name="EditAsset" xml:space="preserve">
+    <value>Tafatir Hanti</value>
   </data>
 </root>
