--- a/MODAMSWeb/Resources/Areas/Users/Views/Disposals/EditDisposal.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Disposals/EditDisposal.so.resx
@@ -180,4 +180,10 @@
   <data name="Confirm" xml:space="preserve">
     <value>Xaqiiji</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
+  </data>
+  <data name="Disposals" xml:space="preserve">
+    <value>Ka-takhalusid</value>
+  </data>
 </root>
