--- a/MODAMSWeb/Resources/Areas/Users/Views/Disposals/Index.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Disposals/Index.en.resx
@@ -135,6 +135,9 @@
   <data name="Confirm" xml:space="preserve">
     <value>Confirm</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
   <data name="Date" xml:space="preserve">
     <value>Date</value>
   </data>
