--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.en.resx
@@ -195,4 +195,13 @@
   <data name="RejectTransfer" xml:space="preserve">
     <value>Reject Transfer</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
+  <data name="Transfers" xml:space="preserve">
+    <value>Transfers</value>
+  </data>
+  <data name="PreviewTransfer" xml:space="preserve">
+    <value>Preview Transfer</value>
+  </data>
 </root>
