--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.so.resx
@@ -195,4 +195,13 @@
   <data name="RejectTransfer" xml:space="preserve">
     <value>Ka Laabo Wareejinta</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard-ka</value>
+  </data>
+  <data name="Transfers" xml:space="preserve">
+    <value>Wareejin</value>
+  </data>
+  <data name="PreviewTransfer" xml:space="preserve">
+    <value>Sii-eeg Wareejinta</value>
+  </data>
 </root>
