--- a/MODAMSWeb/Resources/Areas/Admin/Views/Departments/DepartmentHeads.en.resx
+++ b/MODAMSWeb/Resources/Areas/Admin/Views/Departments/DepartmentHeads.en.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AnErrorOccurredWhileRemovingTheUser" xml:space="preserve">
+    <value>An error occurred while removing the user</value>
+  </data>
+  <data name="AreYouSureYouWantToRemoveThisUser" xml:space="preserve">
+    <value>Are you sure you want to remove this user?</value>
+  </data>
   <data name="AssignOwner" xml:space="preserve">
     <value>Assign Owner</value>
   </data>
@@ -162,8 +168,8 @@
   <data name="OwnershipHistory" xml:space="preserve">
     <value>Ownership History</value>
   </data>
-  <data name="Previous" xml:space="preserve">
-    <value>Previous</value>
+  <data name="RemoveUser" xml:space="preserve">
+    <value>Remove User</value>
   </data>
   <data name="SelectEmployee" xml:space="preserve">
     <value>Select Employee</value>
@@ -177,7 +183,23 @@
   <data name="Telephone" xml:space="preserve">
     <value>Telephone</value>
   </data>
+  <data name="UserRemovedSuccessfully" xml:space="preserve">
+    <value>User removed successfully!</value>
+  </data>
   <data name="VacateStore" xml:space="preserve">
     <value>Vacate Store</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Confirm</value>
+    <comment>Xaqiiji</comment>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="NewUser" xml:space="preserve">
+    <value>New User</value>
   </data>
 </root>
