--- a/MODAMSWeb/Resources/Areas/Users/Views/Stores/index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Stores/index.so.resx
@@ -148,7 +148,7 @@
     <value>Raadi Bakhaar</value>
   </data>
   <data name="Secondary Store" xml:space="preserve">
-    <value>Bakhaar Farac ahXubno</value>
+    <value>Bakhaar Labaad</value>
   </data>
   <data name="Stores" xml:space="preserve">
     <value>Bakhaaro</value>
