--- a/MODAMSWeb/Resources/Areas/Admin/Views/Departments/DepartmentHeads.so.resx
+++ b/MODAMSWeb/Resources/Areas/Admin/Views/Departments/DepartmentHeads.so.resx
@@ -202,4 +202,7 @@
   <data name="NewUser" xml:space="preserve">
     <value>Isticmaalaha Cusub</value>
   </data>
+  <data name="AssignUser" xml:space="preserve">
+    <value>Qoondee Isticmaalaha</value>
+  </data>
 </root>
