--- a/MODAMSWeb/Resources/Views/Shared/layouts/_app-sidebar.so.resx
+++ b/MODAMSWeb/Resources/Views/Shared/layouts/_app-sidebar.so.resx
@@ -124,7 +124,7 @@
     <value>Dashboard-ka</value>
   </data>
   <data name="Disposals" xml:space="preserve">
-    <value>Ka-takhalusid</value>
+    <value>Halaabey</value>
   </data>
   <data name="Handovers" xml:space="preserve">
     <value>Dhiibid</value>
