--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/PreviewTransfer.en.resx
@@ -204,4 +204,7 @@
   <data name="PreviewTransfer" xml:space="preserve">
     <value>Preview Transfer</value>
   </data>
+  <data name="Status" xml:space="preserve">
+    <value>Status</value>
+  </data>
 </root>
