upgrading chart in dashboard

--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/Index.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/Index.en.resx
@@ -163,7 +163,7 @@
     <value>Model</value>
   </data>
   <data name="NewAsset" xml:space="preserve">
-    <value>New Asset</value>
+    <value>Register New Asset</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
