--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/Index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/Index.so.resx
@@ -163,7 +163,7 @@
     <value>Model-ka</value>
   </data>
   <data name="NewAsset" xml:space="preserve">
-    <value>Hanti Cusub</value>
+    <value>Diiwaangeli Hanti Cusub</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Hore</value>
